@@ -1,34 +1,0 @@
-
-  http://kenwheeler.github.io/slick/
-
-  // @todo use data-slick to store the object:
-  // https://github.com/kenwheeler/slick/issues/91
-  // https://github.com/kenwheeler/slick/pull/407
-  // https://github.com/AndreSteenveld/slick/commit/b9b59e8c01b7d7fb3fcc2962140991a7f190c617
-
-
- // @done at slick.elements.inc
- - asNavFor string 	null 	Set the slider to be the navigation of other slider (Class or ID Name)
- - appendArrows	string 	$(element) 	Change where the navigation arrows are attached (Selector, htmlString, Array, Element, jQuery object)
- - focusOnSelect boolean 	false 	Enable focus on selected element (click)
- - rtl boolean 	false 	Change the slider's direction to become right-to-left
-
-  // @done at slick_fields.
-	// @todo at slick.elements.inc when mousewheel gets in.
-  // @see https://github.com/kenwheeler/slick/issues/122
-	$options['mousewheel'] = array(
-    'title' => t('Use mousewheel'),
-    'description' => t('Enable/Disable Mousewheel support. Make sure to download the <a href="@mousewheel">mousewheel</a> library, and it is available at <em>sites/.../libraries/mousewheel/jquery.mousewheel.min.js</em>.', array('@mousewheel' => '/github.com/brandonaaron/jquery-mousewheel')),
-    'type' => 'checkbox',
-    'cast' => 'bool',
-    'default' => FALSE,
-  );
-
- @done, see slick.api.js:
- onBeforeChange(this, index) 	method 	null 	Before slide change callback
- onAfterChange(this, index) 	method 	null 	After slide change callback
- onInit(this) 	method 	null 	When Slick initializes for the first time callback
- onReInit(this) 	method 	null 	Every time Slick (re-)initializes callback
-
- @done, see slick.load.js:
- customPaging 	function 	n/a 	Custom paging templates. See source for use example.
